<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".M_member">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/kilin"
                app:srcCompat="@drawable/kilin" />
        </LinearLayout>

        <TextView
            android:id="@+id/nowmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_membergetmoney"
           />

        <Button
            android:id="@+id/getmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/M_getmoney"
            android:onClick="getmoney_click"/>

        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buy_click"
            android:text="@string/M_buy" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:onClick="gorecord"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>