<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="250dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/kilin"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_register"
            android:onClick="b_register_click"/>

        <Button
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="m_register_click"
            android:text="@string/m_register" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>